# paperflow

./: .env.example  .gitignore  README.md  STATE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: confidence.py  config.py  db.py  export.py  extract.py  ingest.py  llm.py  main.py  models.py  normalize.py  pipeline.py  validation.py
app/static/: app.js  index.html  styles.css
evals/: gen_data.py  generate.py  render.py  report_md.py  run.py  score.py
evals/results/: run_console.txt
tests/: test_confidence.py  test_extract_parsing.py  test_normalize.py  test_validation.py
