[project]
name = "paperflow"
version = "0.1.0"
description = "Invoice/receipt -> structured data pipeline with confidence routing and an eval harness"
requires-python = ">=3.11"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
